# Tinker

./: CMakeLists.txt  README.md  build.bat  run.bat
tinker/: CMakeLists.txt
tinker/source/tinker/core/: config.h  debug.h  file.cpp  file.h  image.cpp  image.h  init.cpp  init.h  profile.h  types.h
tinker/source/tinker/graphics/: graphics.cpp  renderer_2d.cpp  renderer_2d.h
tinker/source/tinker/graphics/ogl/: ogl.cpp  ogl.h
tinker/source/tinker/graphics/vk/: vk.h
tinker/source/tinker/math/: matrix4.cpp  matrix4.h  quaternion.h  trigonometry.cpp  trigonometry.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
tinker/source/tinker/platform/: key.h  mouse_button.h  platform.cpp  platform.h
tinker/source/tinker/tinkering/: gpu_texture.h  graphics.h  image.h  logger.h  string.h
tinkering/api_usage/: graphics.h  main.cpp
tinkering/editor/: CMakeLists.txt  common.h  graphics.cpp  graphics.h  main.cpp  shader.frag  swapchain.h
tinkering/editor/shaders/: shader.frag
tinkering/opengl_app/: CMakeLists.txt  main.cpp  shader.vert
tinkering/sandbox/: main.cpp  shader.frag
tinkering/voxel/: CMakeLists.txt
tinkering/vulkan_app/: CMakeLists.txt  common.h  graphics.cpp  main.cpp  queue_families.cpp  queue_families.h  swapchain.cpp  vk_shader_module.cpp  vk_shader_module.h
tinkering/vulkan_app/prev/: main.cpp  my_api.cpp  my_api.h
tinkering/vulkan_app/shaders/: frag.spv  shader.vert  vert.spv
